feat: update docker-compose, add files from lesson 06

--- a/05-project/docker-compose.yml
+++ b/05-project/docker-compose.yml
@@ -1,13 +1,12 @@
 services:
   db:
-    container_name: db
+    container_name: db_workshop
     image: postgres:latest
     environment:
       POSTGRES_DB: northwind
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
-      - postgresql_bin:/usr/lib/postgresql
       - postgresql_data:/var/lib/postgresql/data
       - ./northwind.sql:/docker-entrypoint-initdb.d/northwind.sql
       - ./files:/files
@@ -17,7 +16,7 @@ services:
       - db
 
   pgadmin:
-    container_name: pgadmin
+    container_name: pgadmin_workshop
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
@@ -25,7 +24,6 @@ services:
       PGADMIN_LISTEN_PORT: 5050
       PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
-      - postgresql_bin:/usr/lib/postgresql
       - pgadmin_root_prefs:/root/.pgadmin
       - pgadmin_working_dir:/var/lib/pgadmin
       - ./files:/files
